// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  class="App hex-background"
>
  <div
    class="Sidebar"
  >
    <header
      class="Sidebar-Header"
    >
      <img
        alt="Polyswarm logo"
        src="/img/polyswarm.svg"
      >
        
      </img>
    </header>
    <div
      class="Sidebar-Content"
    >
      
    </div>
  </div>
  <header
    class="Header"
  >
    <h1>
      Polyswarm
    </h1>
    <button
      class="Button"
    >
      + Bounty
    </button>
  </header>
  <div
    class="App-Content"
  >
    <div
      class="Bounty-Create"
    >
      <div
        class="Container"
      >
        <div
          class="Drop-Target"
        >
          <div>
            <div
              class="center"
            >
              <p>
                Drag and drop your files here, or 
              </p>
              <form>
                <input
                  class="hidden"
                  id="file"
                  type="file"
                >
                  
                </input>
                <label
                  for="file"
                >
                  click here.
                </label>
              </form>
            </div>
          </div>
        </div>
        <div
          class="File-List"
        >
          <header
            class="File-List-Header"
          >
            Bounty Files 0
          </header>
          <div
            class="List"
          >
            
          </div>
        </div>
        <button
          class="Button"
          disabled=""
        >
          Create Bounty
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`shows create when no bounties found 1`] = `null`;

exports[`shows manager when at least one bounty & active is negative 1`] = `
<App>
  <div
    className="App hex-background"
  >
    <Sidebar
      active={-1}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="/img/polyswarm.svg"
          />
        </header>
        <div
          className="Sidebar-Content"
        >
          <ListItem
            active={false}
            className="item-0"
            item="asdf"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <div
              className="ListItem"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <p
                className="ListItem-Name"
              >
                asdf
              </p>
            </div>
          </ListItem>
        </div>
      </div>
    </Sidebar>
    <Header
      onClick={[Function]}
      title="Polyswarm"
    >
      <header
        className="Header"
      >
        <h1>
          Polyswarm
        </h1>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <Manager
        bounties={[Function]}
      >
        <div
          className="Manager"
        >
          Placeholder
        </div>
      </Manager>
    </div>
  </div>
</App>
`;

exports[`shows manager when at least one bounty & active selects it 1`] = `
<App>
  <div
    className="App hex-background"
  >
    <Sidebar
      active={0}
      bounties={
        Array [
          Object {
            "guid": "asdf",
          },
        ]
      }
      remove={[Function]}
      select={[Function]}
    >
      <div
        className="Sidebar"
      >
        <header
          className="Sidebar-Header"
        >
          <img
            alt="Polyswarm logo"
            src="/img/polyswarm.svg"
          />
        </header>
        <div
          className="Sidebar-Content"
        >
          <ListItem
            active={true}
            className="item-0"
            item="asdf"
            key="asdf"
            onClick={[Function]}
            remove={[Function]}
          >
            <div
              className="ListItem active"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <p
                className="ListItem-Name"
              >
                asdf
              </p>
            </div>
          </ListItem>
        </div>
      </div>
    </Sidebar>
    <Header
      onClick={[Function]}
      title="Polyswarm"
    >
      <header
        className="Header"
      >
        <h1>
          Polyswarm
        </h1>
        <Button
          className="Header-Button"
          onClick={[Function]}
        >
          <button
            className="Button"
            onClick={[Function]}
          >
            + Bounty
          </button>
        </Button>
      </header>
    </Header>
    <div
      className="App-Content"
    >
      <Manager
        bounties={[Function]}
        bounty={
          Object {
            "guid": "asdf",
          }
        }
      >
        <div
          className="Manager"
        >
          Placeholder
        </div>
      </Manager>
    </div>
  </div>
</App>
`;
